Return correct value for g_socket_get_available_bytes() on Windows and OSX

https://bugzilla.gnome.org/show_bug.cgi?id=686786